@@ -41,9 +41,6 @@ static int genSourceRpmName(Spec spec)
 int packageSources(Spec spec)
 {
     CSA_t csabuf, *csa = &csabuf;
-    HeaderIterator iter;
-    int_32 tag, type, count;
-    char **ptr;
     int rc;
 
     /* Add some cruft */
@@ -60,20 +57,6 @@ int packageSources(Spec spec)
     }
 
     genSourceRpmName(spec);
-
-    /* Add the build restrictions */
-    iter = headerInitIterator(spec->buildRestrictions);
-    while (headerNextIterator(iter, &tag, &type, (void **)&ptr, &count)) {
-	headerAddEntry(spec->sourceHeader, tag, type, ptr, count);
-	if (type == RPM_STRING_ARRAY_TYPE || type == RPM_I18NSTRING_TYPE)
-	    FREE(ptr);
-    }
-    headerFreeIterator(iter);
-    if (spec->buildArchitectureCount) {
-	headerAddEntry(spec->sourceHeader, RPMTAG_BUILDARCHS,
-		       RPM_STRING_ARRAY_TYPE,
-		       spec->buildArchitectures, spec->buildArchitectureCount);
-    }
 
     FREE(spec->cookie);
     
